--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ target/
 
 # exclude data and models from source control by default
 /data/
+!/data/raw/calendar_enriched.csv
 /models/
 
 # Mac OS-specific storage files
